[project]
name = "langchain-learning"
version = "0.1.0"
description = "LangChain + OpenAI learning notebooks (RAG, evaluation, agents)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  # --- LangChain (v1) ---
  "langchain",
  "langchain-core",
  "langchain-community",
  "langchain-openai",
  "langchain-text-splitters",
  # Used by L1 notebook (if you later remove that import, you can drop this)
  "langchain-classic",
  # --- Vector store (Python 3.13 compatible) ---
  "chromadb",
  # --- Data + parsing ---
  "pandas",
  "pydantic",
  # Some notebooks/tooling may import openai directly
  "openai",
  # Optional convenience for local env vars
  "python-dotenv",
  "ddgs>=9.10.0",
  "openapi-python-client>=0.28.0",
  "wikipedia>=1.4.0",
  "langgraph>=1.0.5",
  "langgraph-prebuilt>=1.0.5",
  "langchain-tavily>=0.2.16",
  "langgraph-checkpoint-sqlite>=3.0.1",
  "gradio>=6.3.0",
  "tavily>=1.1.0",
  "aiosqlite<0.22.0",
]

[tool.uv]
# uv will resolve dependencies into uv.lock
